Use uploaded CV text for AI job matching